--- a/popup/popup.html
+++ b/popup/popup.html
@@ -30,11 +30,43 @@
         <div id="connectionStatus" class="status-indicator"></div>
 
         <div class="form-group">
+          <label>Work Package Mode</label>
+          <div class="mode-toggle">
+            <button type="button" id="existingModeBtn" class="mode-btn active">Select Existing</button>
+            <button type="button" id="newModBtn" class="mode-btn">Create New</button>
+          </div>
+        </div>
+
+        <!-- Existing Work Package Selection -->
+        <div id="existingWorkPackageSection" class="form-group">
           <label for="workPackageSelect">Work Package</label>
           <div class="searchable-select-wrapper">
             <input type="text" id="workPackageSearchInput" class="searchable-select-search" placeholder="Type to search work packages..." />
             <select id="workPackageSelect" size="6">
               <option value="">Loading work packages...</option>
+            </select>
+          </div>
+        </div>
+
+        <!-- New Work Package Creation -->
+        <div id="newWorkPackageSection" class="form-group" style="display: none;">
+          <div class="form-group">
+            <label for="projectSelect">Project *</label>
+            <div class="searchable-select-wrapper">
+              <input type="text" id="projectSearchInput" class="searchable-select-search" placeholder="Type to search projects..." />
+              <select id="projectSelect" size="3"></select>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="taskTitle">Task Title *</label>
+            <input type="text" id="taskTitle" placeholder="Enter task title..." />
+          </div>
+
+          <div class="form-group">
+            <label for="taskType">Task Type</label>
+            <select id="taskType">
+              <option value="1">Task</option>
             </select>
           </div>
         </div>
