Form reset option updated

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -99,6 +99,7 @@
         </div>
 
         <button id="logWorkBtn" class="btn btn-primary">Log Work</button>
+        <button id="resetWorklogBtn" class="btn btn-secondary">Reset</button>
       </div>
 
       <div class="section">
