--- a/popup/popup.html
+++ b/popup/popup.html
@@ -208,6 +208,11 @@
     </footer>
   </div>
 
+  <!-- Utility Scripts -->
+  <script src="utils.js"></script>
+  <script src="cache.js"></script>
+
+  <!-- Main Script -->
   <script src="popup.js"></script>
 </body>
 </html>
